<resources>
    <string name="app_name">Rock Paper Scissors</string>
    <string name="default_web_client_id1">896605409351-a1hlsfr6dkigthpbeul0ug46c8774uoa.apps.googleusercontent.com</string>
    <string name="title_activity_main">main_activity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Play</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_profile">Profile</string>

    <string name="rock_image">rock image</string>
    <string name="paper_image">paper image</string>
    <string name="scissors_image">scissors image</string>
    <string name="counter_value"></string>
    <string name="user_username">username</string>
    <string name="user_rank"> </string>
    <string name="match_result">3:1</string>
    <string name="menu_game">Game</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_match_statistics">Personal Match Statistics</string>
    <string name="date">Date</string>
    <string name="mode">Mode</string>
    <string name="score">Score</string>
    <string name="match_detail">Match Detail</string>

    <string name="menu_friends">Friends</string>
    <string name="friends">FRIENDS</string>
    <item name="test_for_stats_row" type="id" />

    <!-- home -->


    <!-- game -->
    <string name="game_over">Game Over</string>
    <string name="win">You win</string>
    <string name="lose">You lose</string>
    <string name="draw">Draw</string>
    <string name="play_again">Play Again</string>
    <string name="back_home">Home</string>
    <string name="init_player_score">0</string>
    <string name="infinity">&#8734;</string>
    <string name="rock_button_des">Host rock button</string>
    <string name="paper_button_des">Host paper button</string>
    <string name="scissors_button_des">Host scissors button</string>
    <string name="autodetect">Auto\nDetect</string>
    <!-- Preference Titles -->
    <string name="appearance_header">Appearance</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">Settings</string>
    <string name="system_mode">System theme</string>
    <string name="system_mode_summary">Use the system theme</string>
    <string name="theme_mode">Theme</string>
    <string name="theme_mode_summary">Use the dark theme</string>
    <string name="theme_pref_key">theme_mode</string>
    <string name="online">Play online</string>
    <string name="play_one_game">1 round</string>
    <string name="play_five_games">5 rounds</string>
    <string name="offline">Play offline</string>
    <string name="profile_picture_desc">Profile picture</string>
    <string name="show_license_key">show_licence</string>
    <string name="license_title">License</string>
    <string name="settings_show_uid_text">settings_show_uid_text</string>
    <string name="add_artificial_game_settings">add_artificial_game_settings</string>
    <string name="copy_fb_uid">Copy Firebase Uid</string>
    <string name="add_artificial_game">Add artificial game</string>
    <string name="join_queue_now_key">join_queue_now</string>
    <string name="_2nd">2ND 🥈</string>
    <string name="_1st">1ST 🥇</string>
    <string name="_3rd">3RD 🥉</string>
    <string name="personal_statistics">Personal Statistics</string>
    <string name="is_first_time">is_first_time</string>
    <string name="settings_clear_shared_prefs">settings_shared_prefs_clear</string>
    <string name="settings_show_onboard">settings_show_onboard</string>
    <string name="show_welcome_screen_text_settings">Show the welcome screen</string>
    <string name="clear_shared_prefs_settings_text">Clear all settings</string>
    <string name="placeholder_text">PLACEHOLDER TEXT</string>
    <string name="cancel_text">Cancel</string>
    <string name="leaderboard">L E A D E R B O A R D</string>


    <!-- Content Description -->
    <string name="clock_description">Clock showing how much time passed</string>
    <string name="camera_description">Clock showing how much time passed</string>
    <string name="new_game">New game</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>


    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="loading">Loading…</string>

    <string name="you_lose">YOU LOSE</string>
    <string name="player">Player</string>
    <string name="outcome">Outcome</string>
    <string name="opponent">Opponent</string>
    <string name="points">points</string>
    <string name="pick_your_side">Pick your side</string>
    <string name="vs_pc">Vs PC</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="edit">Edit</string>
    <string name="text">Text</string>
    <string name="value">Value</string>
    <string name="edit_icon_desc">edit icon</string>
    <string name="choose_game_mode">Choose Game Mode</string>
    <string name="confirm">Confirm</string>
    <string name="dump_dbg_infos_pref_text">Dump debug infos</string>
    <string name="dump_sys_settings_key">dump_sys_settings</string>
    <string name="rock_paper_scissors">Rock Paper Scissors</string>
</resources>