<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_play_circle_filled_24"
            android:enabled="true"
            android:title="@string/menu_home"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_baseline_leaderboard_24"
            android:enabled="true"
            android:title="@string/menu_leaderboard"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_baseline_info_24"
            android:enabled="true"
            android:title="@string/menu_statistics"
            app:showAsAction="ifRoom" />
</menu>