<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ch.epfl.sweng.rps.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_gameFragment"
            app:destination="@id/gameFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="ch.epfl.sweng.rps.ui.leaderboard.LeaderboardFragment"
        android:label="@string/menu_leaderboard"
        tools:layout="@layout/fragment_leaderboard" />
    <fragment
        android:id="@+id/nav_statistics"
        android:name="ch.epfl.sweng.rps.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/gameFragment"
        android:name="ch.epfl.sweng.rps.ui.game.GameFragment"
        android:label="@string/menu_game"
        tools:layout="@layout/fragment_game" >
        <action
            android:id="@+id/action_gameFragment_to_winFragment"
            app:destination="@id/winFragment" />
        <action
            android:id="@+id/action_gameFragment_to_loseFragment"
            app:destination="@id/loseFragment" />
        <action
            android:id="@+id/action_gameFragment_to_drawFragment"
            app:destination="@id/drawFragment" />
    </fragment>
    <fragment
        android:id="@+id/winFragment"
        android:name="ch.epfl.sweng.rps.ui.game.WinFragment"
        android:label="fragment_win"
        tools:layout="@layout/fragment_win" />
    <fragment
        android:id="@+id/loseFragment"
        android:name="ch.epfl.sweng.rps.ui.game.LoseFragment"
        android:label="LoseFragment" />
    <fragment
        android:id="@+id/drawFragment"
        android:name="ch.epfl.sweng.rps.ui.game.DrawFragment"
        android:label="DrawFragment" />
</navigation>